@@ -4259,8 +4259,19 @@ namespace http {
 						devid = id;
 						sunitcode = "0";
 					}
-					else if (lighttype == 305) {
-						//Blinds Openwebnet Bus
+					else if (lighttype == 305)
+					{
+						//Lucci Air
+						dtype = pTypeFan;
+						subtype = sTypeLucciAir;
+						std::string id = request::findValue(&req, "id");
+						if (id.empty())
+							return;
+						devid = id;
+						sunitcode = "0";
+					}
+					else if (lighttype == 400) {
+						//Openwebnet Bus Blinds
 						dtype = pTypeGeneralSwitch;
 						subtype = sSwitchBlindsT1;
 						devid = request::findValue(&req, "id");
@@ -4271,8 +4282,8 @@ namespace http {
 							)
 							return;
 					}
-					else if (lighttype == 306) {
-						//Light Openwebnet Bus
+					else if (lighttype == 401) {
+						//Openwebnet Bus Lights
 						dtype = pTypeGeneralSwitch;
 						subtype = sSwitchLightT1;
 						devid = request::findValue(&req, "id");
@@ -4283,9 +4294,9 @@ namespace http {
 							)
 							return;
 					}
-					else if (lighttype == 307)
+					else if (lighttype == 402)
 					{
-						//Auxiliary Openwebnet Bus
+						//Openwebnet Bus Auxiliary
 						dtype = pTypeGeneralSwitch;
 						subtype = sSwitchAuxiliaryT1;
 						devid = request::findValue(&req, "id");
@@ -4296,8 +4307,8 @@ namespace http {
 							)
 							return;
 					}
-					else if (lighttype == 307) {
-						//Blinds Openwebnet Zigbee
+					else if (lighttype == 403) {
+						//Openwebnet Zigbee Blinds
 						dtype = pTypeGeneralSwitch;
 						subtype = sSwitchBlindsT2;
 						devid = request::findValue(&req, "id");
@@ -4308,7 +4319,7 @@ namespace http {
 							)
 							return;
 					}
-					else if (lighttype == 308) {
+					else if (lighttype == 404) {
 						//Light Openwebnet Zigbee
 						dtype = pTypeGeneralSwitch;
 						subtype = sSwitchLightT2;
@@ -4779,7 +4790,18 @@ namespace http {
 					}
 					else if (lighttype == 305)
 					{
-						//Blinds Openwebnet Bus
+						//Lucci Air
+						dtype = pTypeFan;
+						subtype = sTypeLucciAir;
+						std::string id = request::findValue(&req, "id");
+						if (id.empty())
+							return;
+						devid = id;
+						sunitcode = "0";
+					}
+					else if (lighttype == 400)
+					{
+						//Openwebnet Bus Blinds
 						dtype = pTypeGeneralSwitch;
 						subtype = sSwitchBlindsT1;
 						devid = request::findValue(&req, "id");
@@ -4790,9 +4812,9 @@ namespace http {
 							)
 							return;
 					}
-					else if (lighttype == 306)
+					else if (lighttype == 401)
 					{
-						//Light Openwebnet Bus
+						//Openwebnet Bus Lights
 						dtype = pTypeGeneralSwitch;
 						subtype = sSwitchLightT1;
 						devid = request::findValue(&req, "id");
@@ -4803,9 +4825,9 @@ namespace http {
 							)
 							return;
 					}
-					else if (lighttype == 307)
+					else if (lighttype == 402)
 					{
-					    //Auxiliary Openwebnet Bus
+					    //Openwebnet Bus Auxiliary
 					    dtype = pTypeGeneralSwitch;
 						subtype = sSwitchAuxiliaryT1;
 						devid = request::findValue(&req, "id");
@@ -4816,9 +4838,9 @@ namespace http {
 							)
 							return;
 					}
-					else if (lighttype == 308)
+					else if (lighttype == 403)
 					{
-						//Blinds Openwebnet Zigbee
+						//Openwebnet Zigbee Blinds
 						dtype = pTypeGeneralSwitch;
 						subtype = sSwitchBlindsT2;
 						devid = request::findValue(&req, "id");
@@ -4829,9 +4851,9 @@ namespace http {
 							)
 							return;
 					}
-					else if (lighttype == 309)
+					else if (lighttype == 404)
 					{
-						//Light Openwebnet Zigbee
+						//Openwebnet Zigbee Lights
 						dtype = pTypeGeneralSwitch;
 						subtype = sSwitchLightT2;
 						devid = request::findValue(&req, "id");
