@@ -271,11 +271,12 @@
 						<option value="302">Home Confort TEL-010</option>
 						<option value="303">Selector Switch</option>
 						<option value="304">Itho CVE RFT</option>
-                        <option value="305">Blinds OpenWebNet Bus</option>
-                        <option value="306">Lights OpenWebNet Bus</option>
-                        <option value="307">Auxiliary OpenWebNet Bus</option>
-                        <option value="308">Blinds OpenWebNet Zigbee</option>
-                        <option value="309">Lights OpenWebNet Zigbee</option>
+						<option value="305">Lucci Air</option>
+						<option value="400">Blinds OpenWebNet Bus</option>
+						<option value="401">Lights OpenWebNet Bus</option>
+						<option value="402">Auxiliary OpenWebNet Bus</option>
+						<option value="403">Blinds OpenWebNet Zigbee</option>
+						<option value="404">Lights OpenWebNet Zigbee</option>
 			</select>
 			</td>
 		  </tr>
